# michie

./: .envrc.example  Cargo.toml  Makefile.toml  README.md  dependabot.yml  rust-toolchain.toml
.github/workflows/: checks.yml  ci.yml  release.yml
lib/: Cargo.toml
lib/src/: lib.rs
lib/tests/: dependencies.rs  readme.rs
lib/tests/compile_fail/: attempt_at_unhygienic_access.stderr  failure_to_infer_store_type.stderr  key_type_mismatch.stderr  key_type_not_send.rs  key_type_not_send.stderr  key_type_not_sync.rs  key_type_not_sync.stderr  on_a_const_function.stderr  return_type_not_send_nor_sync.stderr  store_init_omitted_and_default_not_implemented.stderr
macro/: Cargo.toml
tests/: test.rs
tests/compile_fail/: failure_to_infer_store_type.stderr  key_expr_span.stderr  key_type_mismatch.stderr  key_type_not_send_nor_sync.stderr  return_type_not_send_nor_sync.stderr
