[workspace]
resolver = "2"
members = [
    "lib",
    "macro",
]

[workspace.package]
version = "3.0.2"
edition = "2021"
description = "An attribute macro that adds memoization to a function (sounds like Mickey)"
repository = "https://github.com/molybdenumsoftware/michie"
license = "MIT"
keywords = [
    "memoization",
    "memoisation",
    "memoize",
    "memoise",
    "cache",
]
categories = [
    "caching",
]

[workspace.metadata.bin]
cargo-binstall = { version = "1.2.1", locked = true }
cargo-make = { version = "0.37.24", locked = true, bins = ["makers"] }
conventional_commits_linter = { version = "0.12.3", locked = true }
markdown-toc = { version = "0.2.0", locked = true, bins = ["md-toc"] }
sd = { version = "0.7.6", locked = true }
