[package]
name = "michie"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
include = [
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/tests/compile_fail/*.stderr"
]

[dependencies]
michie-macro = { path = "../macro", version = "3.0.2" }

[dev-dependencies]
cargo_toml = "0.22.3"
itertools = "0.15.0"
jql = "8.0.2"
markdown = "1.0.0"
regex = "1.5.5"
semver = "1.0.9"
trybuild = "1.0.56"

[features]

